--- a/improving-http/src/app/foo/foo.component.html
+++ b/improving-http/src/app/foo/foo.component.html
@@ -5,6 +5,17 @@
 <hr>
 
 <button type="button" (click)="makeCompactPost()">Make Post</button>
+<button type="button" (click)="makeTypedRequest()">Make typed request</button>
+
+<!--Uso un ciclo for per scandire tutta la lista di articoli-->
+<div *ngFor="let art of fooData">
+   <h3>{{art.title}}</h3>
+   <b>post {{art.id}} di utente #: {{art.userId}}</b>
+   <div>
+       {{art.body}}
+   </div>
+   <hr>
+</div>
 
 
 
